--- a/static/login.html
+++ b/static/login.html
@@ -78,9 +78,10 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>       
     <script src="js/functions.js"></script><script>
         $('#log').on('click',async ()=>{
-            login().then(result=>alert)
+            startParse().then(result=>alert)
         })
     </script>
 </body>
