--- a/static/index.html
+++ b/static/index.html
@@ -646,7 +646,7 @@
     <script src="js/demo/chart-pie-demo.js"></script>
     <script src="js/functions.js"></script>
     <script>
-      auth()
+    //  auth()
      
     </script>
 </body>
